# de.csbme.MES_SystemMonitor

./: .gitignore  README.md  de.csbme.MES_SystemMonitor.json  meson.build  shell.nix  test.py
.flatpak/: meson.sh
data/: de.csbme.MES_SystemMonitor.desktop.in  de.csbme.MES_SystemMonitor.gschema.xml  de.csbme.MES_SystemMonitor.metainfo.xml.in  de.csbme.MES_SystemMonitor.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.py  mes-monitor.gresource.xml  mes-monitor.in  meson.build  window.py  window.ui
src/controller/: AddProductionLineDialog.py  AddProductionOrderPage.py  ProductionLineDetails.py  ProductionLinesOverlay.py  Produktionslinie.py  Utility.py  window.py
src/model/: ProductionLines.py  ProductionOrder.py
src/view/: add-production-line-dialog.ui  add-production-order-page.ui  new-produktionslinie.ui  production-line-details.ui  production-lines-overlay.ui  window.ui
